index layout finishing

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 layout: single
 collection_name: "faq-pajak"
 menu_list: "faq-pajak-list"
-description: "style the background of an element with colors and images"
+title: FAQ
+description: "FAQ yang dikumpulkan dari Facebook dan Telegram"
 ---
 {% include collections/faq-pajak.html %}
